--- a/komga/docker-compose.yml
+++ b/komga/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - "8085:8085"
     user: "1000:1000"
     environment:
+      - PUID=1000
+      - PGID=1000
       #- KOMF_KOMGA_BASE_URI=https://komga.tuckeredoutbert.com #:25600
       #- KOMF_KOMGA_USER=admin@example.org
       #- KOMF_KOMGA_PASSWORD=admin
