--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /docker/Traefik/traefik.yml:/etc/traefik/traefik.yml
       - /docker/Traefik/acme.json:/acme.json
-      - /docker/Traefik/letsencrypt:/letsencrypt
+      #- /docker/Traefik/letsencrypt:/letsencrypt
       - /docker/Traefik/logs:/logs
     labels:
       - traefik.http.routers.traefik.tls=true
