--- a/beszel/docker-compose.yml
+++ b/beszel/docker-compose.yml
@@ -36,6 +36,7 @@ services:
         max-size: 1m
     volumes:
       - /docker/beszel/config/agent:/var/lib/beszel-agent
+      - ./beszel_socket:/beszel_socket
       - /var/run/docker.sock:/var/run/docker.sock:ro
     secrets:
       - beszel_token
@@ -58,4 +59,4 @@ networks:
   DockerExternal:
     external: true
   DockerInternal:
-    external: true   
+    external: true
