--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   watchtower:
-    image: containrrr/watchtower
+    image: nickfedor/watchtower
     container_name: watchtower
     logging:
       driver: "json-file"
@@ -9,8 +9,8 @@ services:
         max-size: 1m
     restart: unless-stopped
     network_mode: DockerInternal
-    environment:
-      - DOCKER_API_VERSION=1.44
+    #environment:
+    #  - DOCKER_API_VERSION=1.44
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --interval 3600 --cleanup
